refresh error resolve by removing z-index

--- a/my-react-app/src/Components/BandobastReport.css
+++ b/my-react-app/src/Components/BandobastReport.css
@@ -39,7 +39,7 @@
 .modal {
   display: block; /* Show the modal */
   position: fixed;
-  z-index: 1;
+
   left: 0;
   top: 0;
   width: 100%;
